--- a/public/locales/es/common.json
+++ b/public/locales/es/common.json
@@ -131,6 +131,6 @@
   "legal": "Legal",
   "privacyPolicy": "Política de Privacidad",
   "termsOfService": "Términos de Servicio",
-  "copyright": "© {year} LocalizeStrings.com. Todos los derechos reservados.",
+  "copyright": "LocalizeStrings.com. Todos los derechos reservados.",
   "language": "Idioma"
 } 
