--- a/public/locales/zh/common.json
+++ b/public/locales/zh/common.json
@@ -131,6 +131,6 @@
   "legal": "法律",
   "privacyPolicy": "隐私政策",
   "termsOfService": "服务条款",
-  "copyright": "© {year} LocalizeStrings.com. 保留所有权利。",
+  "copyright": "LocalizeStrings.com. 保留所有权利。",
   "language": "语言"
 } 
