--- a/public/locales/fr/common.json
+++ b/public/locales/fr/common.json
@@ -100,6 +100,6 @@
   "legal": "Légal",
   "privacyPolicy": "Politique de Confidentialité",
   "termsOfService": "Conditions d'Utilisation",
-  "copyright": "© {year} LocalizeStrings.com. Tous droits réservés.",
+  "copyright": "LocalizeStrings.com. Tous droits réservés.",
   "language": "Langue"
 } 
