--- a/public/locales/en/common.json
+++ b/public/locales/en/common.json
@@ -13,6 +13,7 @@
     "title": "XLIFF Online Translator",
     "sourceXliff": "Source XLIFF",
     "loadSampleData": "Load Sample Data",
+    "sample": "Sample",
     "reset": "Reset",
     "pasteXliffContentHere": "Paste your XLIFF content here...",
     "translatedXliff": "Translated XLIFF",
@@ -65,6 +66,7 @@
     "title": "JSON Online Translator",
     "sourceJson": "Source JSON",
     "loadSampleData": "Load Sample Data",
+    "sample": "Sample",
     "reset": "Reset",
     "pasteJsonContentHere": "Paste your JSON content here...",
     "translatedJson": "Translated JSON",
