--- a/public/locales/en/common.json
+++ b/public/locales/en/common.json
@@ -117,7 +117,7 @@
   
   "heroTitle": "Your Ultimate Tool for Language Translations and Localization",
   "heroSubtitle": "Translate and localize your content effortlessly, powered by Google Translate API.",
-  "heroSubtitle2": "Perfect for developers, translators,and businesses.",
+  "heroSubtitle2": "Perfect for Developers and Translators.",
   "whyChooseUs": "Why Choose LocalizeStrings.com?",
   "multiLanguageSupport": "Multi Language Support",
   "multiLanguageSupportDesc": "Support for over 100 languages with high accuracy translations",
